129-138行に変更を加えました。
佐賀の酒のホームページにするためです。

--- a/index2.html
+++ b/index2.html
@@ -129,11 +129,10 @@
                                 <div class="col-lg-5 col-md-8">
                                     <div class="banner_text">
                                         <div class="banner_text_iner">
-                                            <h1>季節の酒
+                                            <h1>佐賀ん酒応援サイト
                                            　　　　　 </h1>
-                                            <p>佐賀県産の「日本晴」を天山山系の伏流水で仕込んだ純米酒を一回火入れして瓶貯蔵で蔵内にてひと夏熟成させました。
-                                                程よい熟成によって旨みを増した純米酒は冷やかぬる燗で秋刀魚・松茸といった秋の味覚とともにお楽しみください。</p>
-                                            <a href="#" class="btn_2">buy now</a>
+                                            <p>米、麦、水・・・　　贅沢な佐賀の自然と、
+                                                誠実な酒造りの伝統から生まれる佐賀の酒。知られてみませんか？</p>
                                         </div>
                                     </div>
                                 </div>
@@ -146,10 +145,10 @@
                                 <div class="col-lg-5 col-md-8">
                                     <div class="banner_text">
                                         <div class="banner_text_iner">
-                                            <h1>Cloth & Wood
-                                                Sofa</h1>
-                                            <p>Incididunt ut labore et dolore magna aliqua quis ipsum
-                                                suspendisse ultrices gravida. Risus commodo viverra</p>
+                                            <h1>季節の酒
+                                                　　　</h1>
+                                            <p>佐賀県産の「日本晴」を天山山系の伏流水で仕込んだ純米酒を一回火入れして瓶貯蔵で蔵内にてひと夏熟成させました。
+                                                程よい熟成によって旨みを増した純米酒は冷やかぬる燗で秋刀魚・松茸といった秋の味覚とともにお楽しみください。</p>
                                             <a href="#" class="btn_2">buy now</a>
                                         </div>
                                     </div>
