133行変更しました。
画像を変更。

--- a/index2.html
+++ b/index2.html
@@ -130,7 +130,7 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="img/banner_img.png" alt="">
+                                    <img src="img/kisetu.jpg" alt="">
                                 </div>
                             </div>
                         </div>
