画像を追加　また117行画像変更しました。

--- a/index2.html
+++ b/index2.html
@@ -114,7 +114,7 @@
                                     </div>
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
-                                    <img src="img/kisetu.jpg" alt="">
+                                    <img src="img/home1.jpg" alt="">
                                 </div>
                             </div>
                         </div><div class="single_banner_slider">
