--- a/index2.html
+++ b/index2.html
@@ -570,7 +570,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="section_tittle text-center">
-                        <h2>Best Sellers <span>shop</span></h2>
+                        <h2>Best Sellers</h2>
                     </div>
                 </div>
             </div>
