画像の追加また変更を行いました。

--- a/index2.html
+++ b/index2.html
@@ -172,10 +172,9 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-7 col-sm-6">
                     <div class="single_feature_post_text">
-                        <p>Premium Quality</p>
-                        <h3>Latest foam Sofa</h3>
+                        <h3>岩の蔵　純米大吟醸</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="img/feature/feature_1.png" alt="">
+                        <img src="img/iwanokura.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-5 col-sm-6">
@@ -188,18 +187,16 @@
                 </div>
                 <div class="col-lg-5 col-sm-6">
                     <div class="single_feature_post_text">
-                        <p>Premium Quality</p>
-                        <h3>Latest foam Sofa</h3>
+                        <h3>万齢　純米吟醸　希</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="img/feature/feature_3.png" alt="">
+                        <img src="img/manrei_10.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 col-sm-6">
                     <div class="single_feature_post_text">
-                        <p>Premium Quality</p>
-                        <h3>Latest foam Sofa</h3>
+                        <h3>古伊万里　前　純米</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="img/feature/feature_4.png" alt="">
+                        <img src="img/saki.jpg" alt="">
                     </div>
                 </div>
             </div>
