--- a/index2.html
+++ b/index2.html
@@ -179,10 +179,9 @@
                 </div>
                 <div class="col-lg-5 col-sm-6">
                     <div class="single_feature_post_text">
-                        <p>Premium Quality</p>
-                        <h3>Latest foam Sofa</h3>
+                        <h3>光武　純米</h3>
                         <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-                        <img src="img/feature/feature_2.png" alt="">
+                        <img src="img/mitu.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-5 col-sm-6">
