--- a/index2.html
+++ b/index2.html
@@ -306,7 +306,7 @@
                                         <img src="img/product/product_1.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -316,7 +316,7 @@
                                         <img src="img/product/product_2.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -326,7 +326,7 @@
                                         <img src="img/product/product_3.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -336,7 +336,7 @@
                                         <img src="img/product/product_4.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -346,7 +346,7 @@
                                         <img src="img/product/product_5.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -356,7 +356,7 @@
                                         <img src="img/product/product_6.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -366,7 +366,7 @@
                                         <img src="img/product/product_7.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -376,7 +376,7 @@
                                         <img src="img/product/product_8.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -390,7 +390,7 @@
                                         <img src="img/product/product_1.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -400,7 +400,7 @@
                                         <img src="img/product/product_2.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -410,7 +410,7 @@
                                         <img src="img/product/product_3.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -420,7 +420,7 @@
                                         <img src="img/product/product_4.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -430,7 +430,7 @@
                                         <img src="img/product/product_5.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -440,7 +440,7 @@
                                         <img src="img/product/product_6.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -450,7 +450,7 @@
                                         <img src="img/product/product_7.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -460,7 +460,7 @@
                                         <img src="img/product/product_8.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -474,7 +474,7 @@
                                         <img src="img/product/product_1.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -484,7 +484,7 @@
                                         <img src="img/product/product_2.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -494,7 +494,7 @@
                                         <img src="img/product/product_3.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -504,7 +504,7 @@
                                         <img src="img/product/product_4.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -514,7 +514,7 @@
                                         <img src="img/product/product_5.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -524,7 +524,7 @@
                                         <img src="img/product/product_6.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -534,7 +534,7 @@
                                         <img src="img/product/product_7.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
@@ -544,7 +544,7 @@
                                         <img src="img/product/product_8.png" alt="">
                                         <div class="single_product_text">
                                             <h4>Quartz Belt Watch</h4>
-                                            <h3>$150.00</h3>
+                                            <h3>こちらから</h3>
                                             <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
