index.html一部変更しました
酒造名書き替え

--- a/index2.html
+++ b/index2.html
@@ -303,81 +303,73 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_1.png" alt="">
+                                        <img src="img/narutaki.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>鳴滝酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_2.png" alt="">
+                                        <img src="img/komatu.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>小松酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_3.png" alt="">
+                                        <img src="img/azumazuru.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>東鶴酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_4.png" alt="">
+                                        <img src="img/koyanagi.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>小柳酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_5.png" alt="">
+                                        <img src="img/kawara.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>川浪酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_6.png" alt="">
+                                        <img src="img/yamato.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>大和酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_7.png" alt="">
+                                        <img src="img/yoshitake.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>吉武酒造場</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_8.png" alt="">
+                                        <img src="img/minematu.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>峰松酒造場</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -387,81 +379,73 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_1.png" alt="">
+                                        <img src="img/mitutake.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>光武酒造場</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_2.png" alt="">
+                                        <img src="img/satihime.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>幸姫酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_3.png" alt="">
+                                        <img src="img/yano.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>矢野酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_4.png" alt="">
+                                        <img src="img/baba.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>馬場酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_5.png" alt="">
+                                        <img src="img/seto.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>瀬頭酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_6.png" alt="">
+                                        <img src="img/ide.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>井出酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_7.png" alt="">
+                                        <img src="img/munemasa.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>宗政酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_8.png" alt="">
+                                        <img src="img/owatari.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>樋渡酒造場</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -471,81 +455,10 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/product/product_1.png" alt="">
+                                        <img src="img/matuuraitti.jpg" alt="">
                                         <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
+                                            <h4>松浦一酒造</h4>
                                             <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_2.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_3.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_4.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_5.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_6.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_7.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6">
-                                    <div class="single_product_item">
-                                        <img src="img/product/product_8.png" alt="">
-                                        <div class="single_product_text">
-                                            <h4>Quartz Belt Watch</h4>
-                                            <h3>こちらから</h3>
-                                            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
                                         </div>
                                     </div>
                                 </div>
