画像を追加、index.html、445行458行を変更しました。

--- a/index2.html
+++ b/index2.html
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/owatari.jpg" alt="">
+                                        <img src="img/sakenowa.jpg" alt="">
                                         <div class="single_product_text">
                                             <h4>樋渡酒造場</h4>
                                             <h3>こちらから</h3>
@@ -455,7 +455,7 @@
                             <div class="row align-items-center justify-content-between">
                                 <div class="col-lg-3 col-sm-6">
                                     <div class="single_product_item">
-                                        <img src="img/matuuraitti.jpg" alt="">
+                                        <img src="img/matuuraiti.jpg" alt="">
                                         <div class="single_product_text">
                                             <h4>松浦一酒造</h4>
                                             <h3>こちらから</h3>
