index.html一部変更しました。

--- a/index2.html
+++ b/index2.html
@@ -479,7 +479,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="section_tittle text-center">
-                        <h2>Best Sellers</h2>
+                        <h2>おすすめpick up</h2>
                     </div>
                 </div>
             </div>
@@ -487,38 +487,38 @@
                 <div class="col-lg-12">
                     <div class="best_product_slider owl-carousel">
                         <div class="single_product_item">
-                            <img src="img/product/product_1.png" alt="">
+                            <img src="img/azumaiti.jpg" alt="">
                             <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
+                                <h4>東一　純米酒</h4>
+                                <h3>まろやかな風味すっきりとした酒質でのみやすい純米酒</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/product/product_2.png" alt="">
+                            <img src="img/kihouduru.jpg" alt="">
                             <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
+                                <h4>基峰鶴　超辛口純米酒</h4>
+                                <h3>日本酒度＋８の旨もある旨辛のお酒です。</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/product/product_3.png" alt="">
+                            <img src="img/saki.jpg" alt="">
                             <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
+                                <h4>古伊万里前　純米大吟醸</h4>
+                                <h3>バラのような香りと優しい甘みに包まれる純米大吟醸。</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/product/product_4.png" alt="">
+                            <img src="img/horohoro.jpg" alt="">
                             <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
+                                <h4>純米大吟醸　ほろほろに</h4>
+                                <h3>山田錦100パーセント精米歩合35%の喉越し爽やかなお酒</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/product/product_5.png" alt="">
+                            <img src="img/iwanokura13.png" alt="">
                             <div class="single_product_text">
-                                <h4>Quartz Belt Watch</h4>
-                                <h3>$150.00</h3>
+                                <h4>岩の蔵　13 純米吟醸</h4>
+                                <h3>メロンのような香りがある甘口すっきりなお酒。</h3>
                             </div>
                         </div>
                     </div>
