--- a/index2.html
+++ b/index2.html
@@ -501,7 +501,7 @@
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/saki.jpg" alt="">
+                            <img src="img/saki2.jpg" alt="">
                             <div class="single_product_text">
                                 <h4>古伊万里前　純米大吟醸</h4>
                                 <h3>バラのような香りと優しい甘みに包まれる純米大吟醸。</h3>
