index.html一部名前変更しました。

--- a/index2.html
+++ b/index2.html
@@ -508,14 +508,14 @@
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/horohoro.jpg" alt="">
+                            <img src="img/horohoroni.jpg" alt="">
                             <div class="single_product_text">
                                 <h4>純米大吟醸　ほろほろに</h4>
                                 <h3>山田錦100パーセント精米歩合35%の喉越し爽やかなお酒</h3>
                             </div>
                         </div>
                         <div class="single_product_item">
-                            <img src="img/iwanokura13.png" alt="">
+                            <img src="img/iwanokura13.jpg" alt="">
                             <div class="single_product_text">
                                 <h4>岩の蔵　13 純米吟醸</h4>
                                 <h3>メロンのような香りがある甘口すっきりなお酒。</h3>
